--- a/Marlon Vending Machine/Marlon Vending Machine/Views/Shared/_Layout.cshtml
+++ b/Marlon Vending Machine/Marlon Vending Machine/Views/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Marlon_Vending_Machine - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Marlon_Vending_Machine - <a target="_blank" href="https://github.com/marlonscloud/vending-machine-oxford-economics">Github Repo</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
