--- a/Marlon Vending Machine/Marlon Vending Machine/Views/Home/Index.cshtml
+++ b/Marlon Vending Machine/Marlon Vending Machine/Views/Home/Index.cshtml
@@ -5,12 +5,16 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Marlon's vending machine</h1>
-    <p>Enjoy!</p>
+    <p class="testy">Enjoy!</p>
     
-    @foreach(var product in Model)
+    <div>
+
+    </div>
+    
+    @*@foreach(var product in Model)
     {
         <p>@product.ProductId</p>
         <p>@product.Name</p>
         <p>@product.Price</p>
-    }
+    }*@
 </div>
