--- a/Marlon Vending Machine/Marlon Vending Machine/Views/Shared/_Layout.cshtml
+++ b/Marlon Vending Machine/Marlon Vending Machine/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Marlon_Vending_Machine</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Marlon_Vending_Machine.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Styles/VendingMachine.css" />
 </head>
 <body>
     <header>
