--- a/Marlon Vending Machine/Marlon Vending Machine/Views/Home/Index.cshtml
+++ b/Marlon Vending Machine/Marlon Vending Machine/Views/Home/Index.cshtml
@@ -20,21 +20,27 @@
                 </div>
             </header>
             
-            <form>
+            @*<form>
                 <label>Name >></label><input type="text" /><br />
                 <label>Email >></label><input type="text" /><br />
                 <label>Subject >></label><input type="text" /><br />
                 <label>Message >></label><textarea id="text" rows="1"></textarea><br /><br /><br />
                 <input type="submit" value="Submit" />
                 <a class="button" alt="" href="index.html">Cancel</a>
-            </form>
+            </form>*@
+            
+            <section>
+                <a id="insert-coin-button" class="button">
+                    <p class="insert-coin-ready">INSERT COIN</p>
+                </a>
+            </section>
             
             <p class="clear"><br /></p>
 
             <nav class="site clear">
                 <ul>
                     <li><a href="#" title="">Home</a></li>
-                    <li><a target="_blank" href="https://github.com/marlonscloud/vending-machine-oxford-economics" title="">Marlon's' Github</a></li>
+                    <li><a target="_blank" href="https://github.com/marlonscloud/vending-machine-oxford-economics" title="">Marlon's Github</a></li>
                     <li><a target="_blank" href="https://github.com/guyroyse/vending-machine-kata" title="">Original Kata Github</a></li>
                 </ul>
             </nav>
@@ -47,8 +53,11 @@
 @section scripts {
     <script> 
         $(document).ready(function () {
-            $("#title").focus();
-            $("#text").autosize();
+            document.getElementById("insert-coin-button").addEventListener("click", insertCoin);
+
+            function insertCoin() {
+                alert('here we go!');
+            }
         });
     </script>
 }
