--- a/Marlon Vending Machine/Marlon Vending Machine/Views/Home/Index.cshtml
+++ b/Marlon Vending Machine/Marlon Vending Machine/Views/Home/Index.cshtml
@@ -20,29 +20,23 @@
                 </div>
             </header>
             
-            @*<form>
-                <label>Name >></label><input type="text" /><br />
-                <label>Email >></label><input type="text" /><br />
-                <label>Subject >></label><input type="text" /><br />
-                <label>Message >></label><textarea id="text" rows="1"></textarea><br /><br /><br />
-                <input type="submit" value="Submit" />
-                <a class="button" alt="" href="index.html">Cancel</a>
-            </form>*@
-            
             <div>
                 <a id="insert-coin-button" class="button">
-                    <p class="insert-coin-ready">INSERT COIN</p>
+                    <p id="coin-insert" class="insert-coin-ready">INSERT COIN</p>
                 </a>
             </div>
             
             <div class="weight-size-fields">
-                <p>Please enter the coin's weight and size</p>
+                <p>Please enter the coin's weight and size.</p>
+                <p id="nickel-added">Nickel Added!</p>
+                <p id="dime-added">Dime Added!</p>
+                <p id="quarter-added">Quarter Added!</p>
                 <p id="coin-invalid" class="error">Please enter a valid coin. We only accept nickels, dimes, and quarters.
                     For more information on coin sizes, click <a target="_blank" href="https://www.supermoney.com/dime-weigh/#:~:text=How%20much%20do%20quarters%2C%20nickels,a%20thickness%20of%201.52%20mm.">here</a>.
                 </p>
                 
-                <label>Coin weight >></label><input id="coin-weight" type="text"/><br/>
-                <label>Coin size >></label><input id="coin-size" type="text"/><br/>
+                <label>Weight (grams) >></label><input id="coin-weight" type="text"/><br/>
+                <label>Diameter (mm) >></label><input id="coin-size" type="text"/><br/>
             </div>
             
             <p class="clear"><br /></p>
@@ -63,23 +57,67 @@
 @section scripts {
     <script> 
         $(document).ready(function () {
-            document.getElementById("insert-coin-button").addEventListener("click", insertCoin);
+            document.getElementById("insert-coin-button").addEventListener("click", function() {
+                insertCoin(0);
+            });
             document.getElementById("coin-weight").addEventListener("change", showCoinInfo);
             document.getElementById("coin-size").addEventListener("change", showCoinInfo);
 
-            function insertCoin() {
+            window.balance = 0;
+
+            function insertCoin(coin = 0) {
                 $('.weight-size-fields').show();
+                window.balance += coin;
+                $('#coin-insert').text('Balance: ' + Math.round(window.balance * 100) / 100);
             }
 
             function showCoinInfo() {
                 var coinWeight = $('#coin-weight');
                 var coinSize = $('#coin-size');
 
-                if (coinWeight.val() === "" || coinSize.val() === "") {
+                if (!processCoin(coinWeight.val(), coinSize.val())) {
                     $('#coin-invalid').show();
                 } else {
                     $('#coin-invalid').hide();
                 }
+            }
+
+            function processCoin(coinWeight, coinSize) {
+                var coinValid = false;
+
+                if (coinWeight === "5000" && coinSize === "21.21") {
+                    $('#nickel-added').show();
+                    $('#dime-added').hide();
+                    $('#quarter-added').hide();
+                    coinValid = true;
+                    clearFields();
+                    insertCoin(0.05);
+                }
+
+                if (coinWeight === "2268" && coinSize === "17.91") {
+                    $('#nickel-added').hide();
+                    $('#dime-added').show();
+                    $('#quarter-added').hide();
+                    coinValid = true;
+                    clearFields();
+                    insertCoin(0.10);
+                }
+
+                if (coinWeight === "5670" && coinSize === "24.26") {
+                    $('#nickel-added').hide();
+                    $('#dime-added').hide();
+                    $('#quarter-added').show();
+                    coinValid = true;
+                    clearFields();
+                    insertCoin(0.25);
+                }
+
+                return coinValid;
+            }
+
+            function clearFields() {
+                $('#coin-weight').val('');
+                $('#coin-size').val('');
             }
         });
     </script>
